# esp32_freeRTOS_ws2812

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  def.h  http_handler.c  http_handler.h  idf_component.yml  led_handler.c  led_handler.h  log_handler.c  log_handler.h  main.c  ota_handler.c  ota_handler.h  shared_types.h  token_handler.c  token_handler.h  user_handler.c  user_handler.h  wifi_handler.c  wifi_handler.h
spiffs_data/: app.js  index.html  style.css
